--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,13 @@
 
 
     <string name="menu_asistencias">Asistencias</string>
+    <string name="menu_logout">Salir</string>
 
 
 
     <string name="confirmacion_success">Asistencia Registrada</string>
     <string name="confirmacion_warning">No se encontraron Asignaturas para registrar asistencia a esta hora.</string>
+    <string name="confirmacion_prev_asistencia">Asistencia previamente registrada.</string>
     <string name="confirmacion_error">Ocurrio un error</string>
     <string name="confirmacion_asignatura">Asignatura: </string>
     <string name="confirmacion_carne">Carne: </string>
